--- a/hw_web/asyncio/docker-compose.yml
+++ b/hw_web/asyncio/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 
 services:
   db:
-    image: postgres:13.0-alpineа
+    image: postgres:13.0-alpine
     ports:
       - "5431:5432"
     environment:
